--- a/papers/pfds/chapter05.tex
+++ b/papers/pfds/chapter05.tex
@@ -2,28 +2,33 @@
 %\section{Ленивое вычисление}
 
 
-\chap{Основы амортизации}
+%\chap{Основы амортизации}
 
 
 \section{Методы амортизированного анализа}
 \label{sc:5.1}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}{Методы амортизированного анализа}
 Реализации с амортизированными
 характеристиками производительности часто оказываются проще и быстрее,
-чем реализации со сравнимыми жёсткими характеристиками.
+чем реализации со сравнимыми жёсткими характеристиками. \\
 
 К сожалению, простой подход к амортизации, рассматриваемый в этой
 главе, конфликтует с идеей устойчивости~--- эти структуры, будучи
 используемы как устойчивые, могут быть весьма неэффективны. Однако на
 практике многие приложения устойчивости не требуют, и часто для таких
 приложений реализации, представленные в этой главе, могут быть
-замечательным выбором. В следующей главе мы увидим, как можно
-совместить понятия амортизации и устойчивости при помощи ленивого
-вычисления.
+замечательным выбором. \\
 
-TODO:
+Чтобы совместить амортизацию и устойчивость стоит применить 
+\emph{ленивые вычисления}.
+
+%В следующей главе мы увидим, как можно
+%совместить понятия амортизации и устойчивости при помощи ленивого
+%вычисления.
+%
+%TODO:
 \end{frame}
 
 
@@ -152,11 +157,6 @@ $$
 кредита так, чтобы при всякой дорогой операции достаточное его
 количество было выделено в нужных ячейках структуры для покрытия
 стоимости операции.
-\end{frame}
-
-
-\begin{frame}[fragile]{}
-1
 \end{frame}
 
 \begin{frame}[fragile]{Метод физика}
@@ -411,7 +411,7 @@ $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)
 \hsinline{link}. Если изначально в куче было $t$ деревьев, то после
 вставки окажется $t - k + 1$ деревьев. Таким образом, изменение
 потенциала составляет $(t - k + 1) - t = 1 - k$, а амортизированная
-стоимость вставки $(k + 1) - (1 - k) = 2$.\\
+стоимость вставки $(k + 1) + (1 - k) = 2$.\\
 
 \begin{exercise}\label{ex:5.2}
   Повторите доказательство с использованием метода банкира.
@@ -455,7 +455,7 @@ $$
 \section{Расширяющиеся кучи}
 \label{sc:5.4}
 
-\begin{frame}[fragile]{}
+\begin{frame}{\term{Расширяющиеся деревья}{splay trees}}
 \term{Расширяющиеся деревья}{splay trees} \cite{SleatorTarjan1985}~--- возможно, самая известная
 и успешно применяемая амортизированная структура данных.\\
 
@@ -472,7 +472,7 @@ $$
 \end{frame}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}[fragile]{Расширяющиеся vs. деревья поиска}
 Важное различие между расширяющимися и сбалансированными
 двоичными деревьями поиска вроде красно-чёрных деревьев из
 Раздела~\ref{sc:3.3} состоит в том, что расширяющиеся деревья
@@ -487,7 +487,7 @@ $$
   В принципе можно было бы хранить корень расширяющегося дерева в
   ссылочной ячейке и обновлять значение по ссылке при каждом запросе, но
   такое решение не является чисто функциональным.
-}
+}.
 \end{frame}
 
 
@@ -568,7 +568,7 @@ bigger pivot (T a x b) =
 \begin{figure}
   \centering
   \input{figures/fig.5.4.tex}
-  \caption{Вызов функции \hsinline{bigger} с граничным элементом 0 на сильно несбалансированном дереве.}
+  \caption{Вызов функции \hsinline{bigger} с граничным элементом \hsinline{pivot} = 0 на сильно несбалансированном дереве.}
   \label{fig:5.4}
 \end{figure}
 
@@ -594,17 +594,18 @@ $\lfloor d/2 \rfloor + 1$.\\
 глубина каждого лежащего на пути узла уменьшалась примерно вполовину.
 \end{frame}
 
+\ifanswers
 \begin{frame}[fragile]{}
 \begin{exercise}\label{ex:5.4}
   Реализуйте операцию \lstinline!smaller!. Не забудьте, что
   \lstinline!smaller! должна сохранять элементы, равные границе (однако
   устраивать отдельную проверку на равенство не следует!).
 \end{exercise}
-
 \end{frame}
+\fi 
+
 
 \begin{frame}[fragile]{}
-
 Рассмотрим теперь \hsinline{findMin} и
 \hsinline{deleteMin}. Минимальный элемент расширяющегося дерева
 хранится в самой левой его вершине типа \hsinline{T}. Найти эту
@@ -617,13 +618,19 @@ $\lfloor d/2 \rfloor + 1$.\\
 ветвь, сравнения не нужны.
 \inputminted[firstline=46,lastline=49,gobble=2] {haskell}{code/SplayHeap.lhs}
 
-N.B. Функция слияния
-\hsinline{merge} довольно неэффективна и для многих входов
-занимает $O(n)$ времени.
-
 
 \end{frame}
 
+\begin{frame}[fragile]{}
+N.B. Функция слияния
+\hsinline{merge} довольно неэффективна и для многих входов
+занимает $O(n)$ времени.\\
+
+Можно показать методом физика, что \hsinline{insert} выполняется за время
+$O(\log n)$.
+\end{frame}
+
+\begin{comment}
 \begin{frame}[fragile]{}
 Теперь мы хотим показать, что \hsinline{insert} выполняется за время
 $O(\log n)$. Пусть $\#t$ обозначает размер дерева $t$ плюс
@@ -718,3 +725,5 @@ $2 + 2\log(\#t) + \log(\#t + 1) \approx 2 + 3\log(\#t)$.
 
 TODO
 \end{frame}
+
+\end{comment}
