--- a/papers/pfds/chapter09.tex
+++ b/papers/pfds/chapter09.tex
@@ -1,6 +1,5 @@
-\chap{Некоторые известные структуры данных в функциональном
-  окружении}
-\label{ch:9}
+%\chap{Некоторые известные структуры данных в функциональном окружении}
+%\label{ch:9}
 
 \begin{frame}[fragile]{Списки похожи на числа}
 
