--- a/papers/pfds/pfds_talk.tex
+++ b/papers/pfds/pfds_talk.tex
@@ -10,6 +10,7 @@
   ]{beamer}
 \usetheme{CambridgeUS}
 \beamertemplatenavigationsymbolsempty % remove navigation bar
+\setbeamertemplate{headline}{}
 
 \usefonttheme{professionalfonts}
 \input{heading.tex}
@@ -84,7 +85,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%5
-\title[]{Чисто функциональные структуры данных}
+\title[PFDS с примерами на Haskell]{Чисто функциональные структуры данных}
 \subtitle{С примерами кода на Haskell}
 \author{Косарев Дмитрий }
 
@@ -126,15 +127,173 @@
   \tableofcontents
 \end{frame}
 
-\begin{frame}[fragile]{}
-Мунк
+\begin{frame}[fragile]{Чисто функциональные структуры данных}
+\begin{itemize}
+  \item Следуя книге Okasaki "Pure Functional Data Structures"
+  \item С примерами кода на языке Haskell
+  \item В принципе, можно бы и на Python, но оно будет выглядеть отвратительно
+  \item Поэтому сначала gentle introduction to Haskell (с)
+  \item Будет непонятно -- кричите!
+\end{itemize}
 \end{frame}
 
-\section{Индуктивные типы данных}
+{
+\setbeamertemplate{headline}{}
+\setbeamertemplate{footline}{}
+\usebackgroundtemplate{
+  \includegraphics[width=\paperwidth]{munch2.jpg}
+}
+\begin{frame}
+\end{frame}
+}
 
-%\input{chapter03.tex}
+\section{Введение в Haskell}
 
-%\input{chapter05.tex}
+\begin{frame}[fragile]{Чистые функции}
+\begin{definition}{Чистая функция -- это}
+  \begin{itemize}
+    \item Детерминированная
+    \item В процессе работы не совершающая ``побочных эффектов''
+  \end{itemize}
+\end{definition}
+Т.е. запрещены: ввод-вывод, случайные значения, присваивания\\
+
+N.B. Это свойство \emph{функции}, а не языка программирования
+
+% TODO: referential transparency?
+\end{frame}
+
+
+\begin{frame}[fragile]{Индуктивные типы данных}
+По сути: объединение enum'ов и  record'ов в единый способ описания типов.\\
+
+\begin{minipage}{.58\textwidth}
+\begin{minted}{c}
+// C or C++
+enum typ {
+  A, B
+}
+struct a_contents {
+  Int    first;
+  String second;
+};
+struct b_contents {
+};
+
+size_t foo(typ tag, (void*)cntnts );
+\end{minted}
+\end{minipage}
+\begin{minipage}{.38\textwidth}
+\begin{minted}{haskell}
+-- Haskell
+data Typ = A Int String
+         | B
+         
+         
+  -- A and B are called 
+  -- `constructors` 
+         
+         
+         
+         
+foo :: Typ -> Size         
+\end{minted}
+\end{minipage}
+\end{frame}
+
+\begin{frame}[fragile]{Индуктивные типы данных (2/2). Использование}
+
+
+\begin{minipage}{.65\textwidth}
+  \begin{minted}[gobble=2]{c}
+  /* C */
+  size_t foo(typ tag, (void*)cntnts ) {
+    switch (tag) {
+    case A: 
+      int x    = ((a_contents*)cntnts).first;
+      String s = ((a_contents*)cntnts).second;
+      ...
+      break;
+    case B:
+      ...
+      break;
+    }    
+    assert(0); /* unreachable */
+    return 0;
+  }
+  \end{minted}
+\end{minipage}
+\begin{minipage}{.3\textwidth}
+  \begin{minted}[gobble=2]{haskell}
+  -- Haskell
+  foo (A x s) = ...
+  foo B       = ...
+
+
+  -- A and B are called 
+  -- `constructors`
+  
+  
+  
+  
+  -- compiler warns if some
+  -- cases are not taken
+  -- care of
+  \end{minted}
+\end{minipage}
+\end{frame}
+
+\begin{frame}[fragile]{Индуктивные типы данных. Важные примеры.}
+\begin{minted}{haskell}
+data Nat = 
+   Zero                                -- Zero :: Nat
+ | Succ Nat                            -- Succ :: Nat -> Nat
+
+data List a =                              -- Nil :: List a
+    Nil                                    -- Cons :: a -> List a -> List a
+ | Cons a (List a)                         -- Cons 5 Nil :: List Int
+
+data Tree  a = 
+    Leaf                         -- Leaf :: Tree a
+  | Node (Tree a) a (Tree a)     -- Node :: Tree a -> a -> Tree a -> Tree a
+\end{minted}
+\end{frame}
+
+\begin{frame}[fragile]{Индуктивные типы данных. Встроенный список Haskell}
+\begin{minted}{haskell}
+-- user-defined linked list in Haskell
+data List a =                              -- Nil :: List a
+    Nil                                    -- Cons :: a -> List a -> List a
+  | Cons a (List a)                        -- Cons 5 Nil :: List Int
+
+-- built-in linked list in Haskell
+data [] a = [] | a : [a]               -- [] :: [a]
+                                       -- (:) :: a -> [a] -> [a]
+                                       -- 1:2:3:[] :: [Int]
+                                       -- [1,2,3,4] :: [Int]
+\end{minted}
+\end{frame}
+
+\begin{frame}[fragile]{Индуктивные типы данных и множества}
+\begin{minted}{haskell}
+data Nat = 
+    Zero                                -- Zero :: Nat
+  | Succ Nat                            -- Succ :: Nat -> Nat
+\end{minted}
+Тип \hsinline{Nat} описывает индуктивное множество значений, населяющих тип \hsinline{Nat}, такое, что оно:
+\begin{enumerate}
+  \item содержит значение   \hsinline{Zero}
+  \item замкнуто относительно операции \hsinline{Succ :: Nat -> Nat}
+  \item минимально
+\end{enumerate}
+
+Для остальных индуктивных типов данных (связные списки, деревья) рассуждения аналогичны.
+\end{frame}
+
+
+\input{chapter03.tex}
+
+\input{chapter05.tex}
 
 \input{chapter09.tex}
 
@@ -142,6 +301,10 @@
 1
 \end{frame}
 
+
+\begin{frame}[fragile]{}
+1
+\end{frame}
 
 % \begin{frame}[allowframebreaks]
 %   \frametitle<presentation>{Ссылки}
