--- a/papers/pfds/pfds_talk.tex
+++ b/papers/pfds/pfds_talk.tex
@@ -282,7 +282,7 @@ data Nat =
 \end{minted}
 Тип \hsinline{Nat} описывает индуктивное множество значений, населяющих тип \hsinline{Nat}, такое, что оно:
 \begin{enumerate}
-  \item содержит значение   \hsinline{Zero}
+  \item содержит значение \hsinline{Zero}
   \item замкнуто относительно операции \hsinline{Succ :: Nat -> Nat}
   \item минимально
 \end{enumerate}
@@ -290,6 +290,14 @@ data Nat =
 Для остальных индуктивных типов данных (связные списки, деревья) рассуждения аналогичны.
 \end{frame}
 
+\begin{frame}[fragile]{Классы типов $\sim$ интерфейсы}
+\begin{minipage}{.48\textwidth}
+  \inputminted[firstline=9,lastline=15]{haskell}{code/Stacks.hs}
+\end{minipage}
+\begin{minipage}{.48\textwidth}
+  \inputminted[firstline=16,lastline=26]{haskell}{code/Stacks.hs}
+\end{minipage}
+\end{frame}
 
 \input{chapter03.tex}
 
@@ -297,9 +305,7 @@ data Nat =
 
 \input{chapter09.tex}
 
-\begin{frame}[fragile]{}
-1
-\end{frame}
+
 
 
 \begin{frame}[fragile]{}
